assets/css/style.css
html, body {
    height: 100%;
}

nav {
    background-color: forestgreen;
    position: relative;
    overflow: hidden;
}

.navbar-brand {
    font-family: 'Permanent Marker', cursive;
    font-size: 60px;
    color: white;
}

.navbar-brand:hover {
    color: lime;
}

.nav-link {
    font-weight: bold;
    font-size: 20px;
    color: forestgreen;
    z-index: 2;
}

.nav-link:hover {
    color: lime;
}

#dragon {
    position: absolute;
    max-height: 300px;
    left: 150px;
    bottom: 150px;
    display: none;
}

#castle {
    position: absolute;
    max-height: 200px;
    bottom: -25px;
    z-index: 1;
}

#tree {
    position: absolute;
    max-height: 150px;
    right: 150px;
    bottom: -1px;
    display: none;
}

p {
    color: gray;
    font-weight: bold;
    max-width: 500px;
}

#portfolio-projects {
    color: gray;
}

.project-screen {
    max-width: 250px;
    box-shadow: 15px 15px 30px;
}

.footer {
    background-color: forestgreen;
}

#email {
    color: white;
}

.logo {
    max-width: 100px;
    max-height: 100px;
}

@media only screen and (min-width: 1200px) {
    #dragon, #tree {
        display: block;
    }
}

